--- a/index.js.html
+++ b/index.js.html
@@ -133,7 +133,7 @@ module.exports = function registerSnaps () {
      */
     post (pluginConfig, webjerkconfig, results) {
       var res = get(results, `main[${this.name}]`)
-      if (!res.length) return console.error('unable to find run &amp; ref images')
+      if (!res || !res.length) return console.error('unable to find run &amp; ref images')
       var { snapRefRoot, snapRunDir } = res[0]
       if (!snapRunDir || !snapRefRoot) throw new Error('expected snapRunDir &amp; snapRefRoot from main results')
       return Differ.factory({ refDir: snapRefRoot, runDir: snapRunDir, report: pluginConfig.report || true }).run()
